--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Landing Page</title>
     <link rel=stylesheet href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">Header Logo</div>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+        <div class="top-links">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link tree</a>
         </div>
     </header>
     
@@ -25,11 +25,26 @@
 
     <div>
         <h2>Some random information</h2>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="boxes-container">
+            <div class="sub-container">
+                <div class="box"></div>
+                <div class="text"></div>
+            </div>
+
+            <div class="sub-container">
+                <div class="box"></div>
+                <div class="text"></div>
+            </div>
+
+            <div class="sub-container">
+                <div class="box"></div>
+                <div class="text"></div>
+            </div>
+
+            <div class="sub-container">
+                <div class="box"></div>
+                <div class="text"></div>
+            </div>
         </div>
     </div>
 
@@ -42,7 +57,7 @@
     </div>
 
     <footer>
-        
+
     </footer>
 
 </body>
