--- a/index.html
+++ b/index.html
@@ -28,36 +28,34 @@
         <div class="boxes-container">
             <div class="sub-container">
                 <div class="box"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
             <div class="sub-container">
                 <div class="box"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
             <div class="sub-container">
                 <div class="box"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
             <div class="sub-container">
                 <div class="box"></div>
-                <div class="text"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
-    </div>
-
-    <div>
-
-    </div>
-
-    <div>
+    </div class= "quote">
+    <p class="quote-text"></p>
+    <p class="quote-name"></p>
+    
+    <div class="action">
 
     </div>
 
     <footer>
-
+        Copyright © The Odin Project 2021
     </footer>
 
 </body>
