Change structure of navbar
For better accessibility and correct use of tag change <div> to <nav>

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="logo">Header Logo</div>
-        <div class="top-links">
-            <a href="">header link one</a>
+        <nav class="menu"> 
+            <a href="">header link one</a></li>
             <a href="">header link two</a>
             <a href="">header link tree</a>
-        </div>
+        </nav>
     </header>
     
     <div>
@@ -47,8 +47,8 @@
             </div>
         </div>
     </div class= "quote">
-    <p class="quote-text"></p>
-    <p class="quote-name"></p>
+    <p class="quote-text">“Accept the things to which fate binds you, and love the people with whom fate brings you together, but do so with all your heart.”</p>
+    <p class="quote-name">Marcus Aurelius</p>
     
     <div class="action">
 
