Fix layout issue in the first section
Add another div with text and button. Leave image outside of container. Change image to adjust to the model.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         </nav>
     </header>
     
-    <div>
-        <h1> This website is awesome</h1>
-        <p>This website has some subext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button class="CTA">Sign up</button>
-        <img src="" alt="">
+    <div class="first-section">
+        <div>
+            <h1> This website is awesome</h1>
+            <p>This website has some subext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="CTA">Sign up</button>
+        </div>
+        <img src="./images/Eclypse_Jongsun-Lee_Unsplash.jpg" alt="An image of the Universe" height="auto" width="50%">
+        
     </div>
 
     <div>
