--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
     <div class="second-section">
         <h2>Some random information</h2>
         <div class="boxes-container">
-            <div class="sub-container">
+            <div class="sub-boxes-container">
                 <div class="box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
-            <div class="sub-container">
+            <div class="sub-boxes-container">
                 <div class="box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
-            <div class="sub-container">
+            <div class="sub-boxes-container">
                 <div class="box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
 
-            <div class="sub-container">
+            <div class="sub-boxes-container">
                 <div class="box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
