--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
-        
-    </div class= "quote">
-    <p class="quote-text">“Accept the things to which fate binds you, and love the people with whom fate brings you together, but do so with all your heart.”</p>
-    <p class="quote-name">Marcus Aurelius</p>
+    </div>
+
+    <div class="quote">
+        <p class="quote-text">“Accept the things to which fate binds you, and love the people with whom fate brings you together, but do so with all your heart.”</p>
+        <p class="quote-name"> -Marcus Aurelius, Emperor of Rome</p>
+    </div>
     
     <div class="action">
 
